--- a/Secrets/res/values/strings.xml
+++ b/Secrets/res/values/strings.xml
@@ -29,22 +29,26 @@
         - All data is stored safely in encrypted format using strongest AES encryption !!\n
         - No worries to forget pins and passwords now !!\n
         - If you forget Secret Code, Clear application data and cache from Application Manager to reset the App and configure Secret Code and Secret data again. (Data destroyed for security)\n 
-        \n<b>Usage:</b>        \n- On First Use, Set the Master Secret Code, Confirm Master Code, then Set Secret Code and Confirm Secret Code in single session by entering 6+ digit codes.
-        \n If Master Code and Secret Code are not Set in same session, Enter previously set Master Code first and then Set Secret Code and Confirm same Secret Code.
-        \n If you forget Master Code set in Previous session, then clear Application data from Application Manager and Set Master Code and Secret Code again in Single session
-        \n- Save Your Secret data.
+        \n<b>Usage:</b>        \n- On First Use, Register Secret Code and Confirm Secret Code in single session by entering 6+ digit codes.
         \n- Next time Enter the same secret code or master secret code to Login.
-        \n- After 5 unsuccessful login attempts, Application would be locked. Try after 15 minutes.
+        \n- After 5 unsuccessful login attempts, Application would be locked. Try after 1 minutes.
         \n\nHow To Encrypt:
         \n - Select Image in Gallery
         \n - Select Share
-        \n - Select Secrets from list and your image gets decrypted and disappears from gallery
+        \n - Select Secrets from list and your image gets encrypted and disappears from gallery
+        \n\n    OR
+        \n\n - Login To Secrets
+        \n - Go to Images or Videos or MP3 or Files Tab 
+        \n - Select Files to Encrypt 
+        \n - Click Encrypt button at bottom and your image gets encrypted and disappears from gallery
+        
+        
         \n\n How to Decrypt:
         \n - Login To Secrets
         \n - Go to Images or Videos or MP3 or Files Tab 
         \n - Click Decrypt button 
         \n - Select Files to Decrypt 
-        \n - Click Decrypt 
+        \n - Click Decrypt button at bottom
         \n - Check the Files are back in Gallery !!
         </p></string>
     <string name="title_activity_android_tab_layout">Secrets</string>
@@ -53,6 +57,8 @@
     <string name="title_activity_videos">VideosActivity</string>
     <string name="title_activity_files">FilesActivity</string>
     <string name="title_activity_share">Secrets</string>
+    <string name="text_All">Select All</string>
+    <string name="text_preview">No Preview</string>
     
 
 </resources>
