--- a/Secrets/src/com/sonar/secrets/messages.properties
+++ b/Secrets/src/com/sonar/secrets/messages.properties
@@ -54,9 +54,9 @@ Login.10=attempts
 Login.11=attempts
 Login.12=lastAttempt
 Login.13=lastAttempt
-Login.14=Application Locked \!\! Try After 
+Login.14=Application Locked \!\! Try to Login After 
 Login.15=\ mins....
-Login.16=Application Locked \!\! Try After 
+Login.16=Application Locked \!\! Try to Login After 
 Login.17=\ mins....
 Login.18=lastAttempt
 Login.19=lastAttempt
@@ -93,10 +93,10 @@ Login.61=key
 Login.65=InCorrect Code \!\! 
 Login.66=\ attempts remaining \!\!
 Login.67=InCorrect Code \!\! Last attempt remaining \!\!
-Login.68=Application Locked \!\! Try After 
+Login.68=Application Locked \!\! Try to Login After 
 Login.69=\ mins...
 Login.7=Enter 6 or more digits \!\!
-Login.70=Application Locked \!\! Try After 
+Login.70=Application Locked \!\! Try to Login After 
 Login.71=\ mins...
 Login.72=lastAttempt
 Login.73=lastAttempt
