--- a/Secrets/res/values/strings.xml
+++ b/Secrets/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Secrets</string>
+    <string name="app_name">Secrets Pro</string>
     <string name="button_cancel">Cancel</string>
     <string name="button_login">Login</string>
     <string name="code_hint">Enter Secret Code !!</string>
