--- a/Secrets/src/com/sonar/secretspro/messages.properties
+++ b/Secrets/src/com/sonar/secretspro/messages.properties
@@ -1,11 +1,11 @@
 BaseActivity.0=/storage/extSdCard
-BaseActivity.1=/storage/extSdCard/android/data/com.sonar.secretspro.java/ewsdsd/fsdfs/dfsda/dfsd/vfsdfs/d
+BaseActivity.1=/storage/extSdCard/android/data/com.sonar.secretspro/ewsdsd/fsdfs/dfsda/dfsd/vfsdfs/d
 BaseActivity.10=
-BaseActivity.11=/Data/com.sonar.secretspro.java/files
-BaseActivity.12=/Data/com.sonar.secretspro.java/files
+BaseActivity.11=/Data/com.sonar.secretspro/files
+BaseActivity.12=/Data/com.sonar.secretspro/files
 BaseActivity.13=
-BaseActivity.14=/DATA/com.sonar.secretspro.java/files
-BaseActivity.15=/DATA/com.sonar.secretspro.java/files
+BaseActivity.14=/DATA/com.sonar.secretspro/files
+BaseActivity.15=/DATA/com.sonar.secretspro/files
 BaseActivity.16=
 BaseActivity.17=/android
 BaseActivity.18=/android
@@ -34,8 +34,8 @@ BaseActivity.38=
 BaseActivity.4=sfiles
 BaseActivity.5=/ewsdsd/fsdfs/dfsda/dfsd/vfsdfs/d/
 BaseActivity.6=browse
-BaseActivity.8=/data/com.sonar.secretspro.java/files
-BaseActivity.9=/data/com.sonar.secretspro.java/files
+BaseActivity.8=/data/com.sonar.secretspro/files
+BaseActivity.9=/data/com.sonar.secretspro/files
 BaseUtils.0=enable_sounds
 BaseUtils.1=/../../com.cooliris.media/cache/local-image-thumbs
 BaseUtils.2=/../../com.cooliris.media/cache/local-album-cache
